[gd_scene load_steps=4 format=3 uid="uid://bsg48442cd8ft"]

[ext_resource type="Script" uid="uid://b0lvd5tkhvnio" path="res://resources/effects/effect.gd" id="1_qr8jy"]
[ext_resource type="Texture2D" uid="uid://cbf45fqfl3mwm" path="res://assets/status_effect/bleed.png" id="2_ws713"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsprb"]
content_margin_top = 840.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.08627451, 0.6627451, 0.56078434, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
anti_aliasing_size = 0.163

[node name="Effect" type="Node2D"]
scale = Vector2(1.1, 1.1)
script = ExtResource("1_qr8jy")

[node name="EffectTexture" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="EffectIcon" type="TextureRect" parent="EffectTexture"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ws713")
expand_mode = 1

[node name="EffectLevel" type="Panel" parent="EffectTexture/EffectIcon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.90598357
anchor_top = 0.8443224
anchor_right = 0.90598357
anchor_bottom = 0.8443225
offset_left = -5.4955406
offset_top = -5.5084343
offset_right = 5.5044594
offset_bottom = 5.4915657
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xsprb")
metadata/_edit_use_anchors_ = true

[node name="EffectLevelLabel" type="Label" parent="EffectTexture/EffectIcon/EffectLevel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
